[package]
name = "banana_coin"
version = "0.1.0"
authors = ["DragonBanana <10493858@Polimi.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde serialization and deserialization dependency
serde = { version = "1.0.44", features = ["derive"] }
serde_json = "1.0.44"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3